--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -12,7 +12,7 @@
 GETTEXT_MACRO_VERSION = 0.18
 
 PACKAGE = gedit-line-ending-style-plugin
-VERSION = 0.2
+VERSION = 0.2.1a
 PACKAGE_BUGREPORT = dtrebbien@gmail.com
 
 SHELL = /bin/sh
@@ -162,7 +162,7 @@ $(DOMAIN).pot-update: $(POTFILES) $(srcdir)/POTFILES.in remove-potcdate.sed
 	      --files-from=$(srcdir)/POTFILES.in \
 	      --copyright-holder='$(COPYRIGHT_HOLDER)' \
 	      --package-name="$${package_gnu}gedit-line-ending-style-plugin" \
-	      --package-version='0.2' \
+	      --package-version='0.2.1a' \
 	      --msgid-bugs-address="$$msgid_bugs_address" \
 	    ;; \
 	esac
