--- a/src/lineendingstyle.py.in
+++ b/src/lineendingstyle.py.in
@@ -47,13 +47,9 @@ def get_trace_info(num_back_frames=0):
 		frame = None
 
 # Bug 668924 - Make gedit_debug_message() introspectable <https://bugzilla.gnome.org/show_bug.cgi?id=668924>
-try:
-	debug_plugin_message = Gedit.debug_plugin_message
-except:
-	def debug_plugin_message(format_str, *format_args):
-		filename, lineno, func_name = get_trace_info(1)
-		Gedit.debug(Gedit.DebugSection.DEBUG_PLUGINS, filename, lineno, func_name)
-
+def debug_plugin_message(format_str, *format_args):
+	filename, lineno, func_name = get_trace_info(1)
+	Gedit.debug(Gedit.DebugSection.DEBUG_PLUGINS, filename, lineno, func_name)
 
 
 try:
@@ -98,6 +94,7 @@ except:
 					"  -GtkWidget-focus-padding : 0;\n" + \
 					"  padding: 0;\n" + \
 					"}"
+			data = bytes(data.encode())
 			try:
 				css.load_from_data(data)
 			except TypeError: # Issue #1
@@ -301,13 +298,13 @@ except:
 			if property.name == "label":
 				return self.get_label()
 			else:
-				raise AttributeError, "unknown property %s" % property.name
+				raise AttributeError("unknown property %s" % property.name)
 
 		def do_set_property(self, property, value):
 			if property.name == "label":
 				self.set_label(value)
 			else:
-				raise AttributeError, "unknown property %s" % property.name
+				raise AttributeError("unknown property %s" % property.name)
 
 
 
